<resources>
    <string name="app_name" translatable="false">OverwatchStats</string>
    <string name="button_my_profile">Mon Profil</string>
    <string name="label_avatar">Avatar</string>
    <string name="profile_button_quickplay">Partie rapide</string>
    <string name="profile_button_ranked">Partie compétitive</string>
    <string name="profile_button_achievements">Hauts-faits</string>
    <string name="label_available_soon">Bientôt disponible</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_share">Partager</string>
    <string name="menu_plus">Plus</string>
    <string name="menu_profile">Mon Profil</string>
    <string name="menu_favorites">Mes amis</string>
    <string name="menu_place">Carte Interactive</string>
    <string name="menu_heroes">Héros</string>
    <string name="no_friends">Vous n\'avez aucun ami !</string>
    <string name="label_click_for_more">Cliquez pour en savoir plus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="overwatch_map">Carte Overwatch</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_search">Rechercher un joueur</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_add_friend">Ajouter en ami</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Nom d\'utilisateur</string>
    <string name="pref_title_display_battleTag">Battletag</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="friend_added">Ami ajouté !</string>
    <string name="title_friends">Votre liste d\'amis :</string>
    <string name="cant_add_friend">Vous ne pouvez pas ajouter cet utilisateur.</string>
    <string name="friend_deleted">Ami supprimé !</string>
    <string name="cant_delete_friend">Vous ne pouvez pas supprimer cet utilisateur.</string>
    <string name="genji" translatable="false">#83FD01</string>
    <string name="hanzo" translatable="false">#928748</string>
    <string name="mccree" translatable="false">#8D3939</string>
    <string name="widowmaker" translatable="false">#6F6FAE</string>
    <string name="pharah" translatable="false">#1A64C5</string>
    <string name="soldier76" translatable="false">#586FB5</string>
    <string name="ana" translatable="false">#CBC1AD</string>
    <string name="mei" translatable="false">#9ADAF3</string>
    <string name="reaper" translatable="false">#272725</string>
    <string name="roadhog" translatable="false">#C09476</string>
    <string name="junkrat" translatable="false">#D29208</string>
    <string name="zarya" translatable="false">#F470A7</string>
    <string name="sombra" translatable="false">#751B9C</string>
    <string name="zenyatta" translatable="false">#C69B00</string>
    <string name="lucio" translatable="false">#8AEB22</string>
    <string name="winston" translatable="false">#4B4F5A</string>
    <string name="torbjorn" translatable="false">#FF6100</string>
    <string name="dva" translatable="false">#FF7FD0</string>
    <string name="tracer" translatable="false">#FEE06B</string>
    <string name="mercy" translatable="false">#F7911B</string>
    <string name="bastion" translatable="false">#6D984C</string>
    <string name="symmetra" translatable="false">#5BEBFF</string>
    <string name="reinhardt" translatable="false">#A9958D</string>
    <string name="orisa" translatable="false">#1D2741</string>
    <string name="transcendence_healing">Soins de transcendance</string>
    <string name="defensive_assists_most_in_game">Soutiens défénsifs (Max.)</string>
    <string name="healing_done">Soins prodigués</string>
    <string name="healing_done_most_in_life">Soins prodigués (1 vie)</string>
    <string name="healing_done_most_in_game">Soins prodigués (Max.)</string>
    <string name="defensive_assists">Soutiens défensifs</string>
    <string name="weapon_accuracy_best_in_game">Précision (Max.)</string>
    <string name="shots_hit">Tirs touchants la cible</string>
    <string name="self_healing_most_in_game">Soins personnels (Max.)</string>
    <string name="self_healing">Soins personnels</string>
    <string name="shots_fired">Tirs</string>
    <string name="critical_hits_most_in_life">Coups critiques (1 vie)</string>
    <string name="weapon_accuracy">Précision</string>
    <string name="critical_hits">Coups critiques</string>
    <string name="critical_hit_accuracy">Précision des coups critiques</string>
    <string name="critical_hits_most_in_game">Coups critiques (Max.)</string>
    <string name="melee_final_blows">Coups de grâce en mêlée</string>
    <string name="teleporter_pads_destroyed">Téléporteurs détruits</string>
    <string name="damage_done_most_in_game">Dégâts infligés (Max.)</string>
    <string name="objective_kills">Victimes sur objectif</string>
    <string name="time_spent_on_fire">Temps passé à déchirer</string>
    <string name="medals_bronze">Médailles de bronze</string>
    <string name="objective_kills_most_in_game">Victimes sur objectif (Max.)</string>
    <string name="games_won">Parties gagnées</string>
    <string name="offensive_assists">Soutiens offensifs</string>
    <string name="eliminations_per_life">Éliminations par vie (Moy.)</string>
    <string name="eliminations_most_in_game">Éliminations (Max.)</string>
    <string name="kill_streak_best">Série de victimes (Max.)</string>
    <string name="multikill">Éliminations simultanées</string>
    <string name="environmental_kill">Élimination liée à l\'environnement</string>
    <string name="time_played">Temps joué</string>
    <string name="final_blows">Coups de grâce</string>
    <string name="eliminations_most_in_life">Éliminations (1 vie)</string>
    <string name="deaths">Morts</string>
    <string name="time_spent_on_fire_most_in_game">Temps passé à déchirer (Max.)</string>
    <string name="medals_gold">Médailles d\'or</string>
    <string name="offensive_assists_most_in_game">Soutiens offensifs (Max.)</string>
    <string name="environmental_deaths">Morts liés à l\'environnement</string>
    <string name="objective_time_most_in_game">Temps passé sur l\'objectif (Max.)</string>
    <string name="multikill_best">Éliminations simultanées (Max.)</string>
    <string name="damage_done_most_in_life">Dégâts infligés (1 vie)</string>
    <string name="solo_kills">Victimes en solo</string>
    <string name="final_blows_most_in_game">Coups de grâce (Max.)</string>
    <string name="eliminations">Éliminations</string>
    <string name="turrets_destroyed">Tourelles détruites</string>
    <string name="cards">Cartes</string>
    <string name="medals_silver">Médailles d\'argent</string>
    <string name="objective_time">Temps sur objectif</string>
    <string name="damage_done">Dégâts infligés</string>
    <string name="medals">Médailles</string>
    <string name="solo_kills_most_in_game">Victimes en solo (Max.)</string>
    <string name="shield_generator_destroyed">Générateurs de boucliers détruits</string>
    <string name="fan_the_hammer_kills_most_in_game">Victimes de mitraillage (Max.)</string>
    <string name="primal_rage_kills_most_in_game">Victimes de rage primordiale (Max.)</string>
    <string name="primal_rage_kills">Victimes de rage primordiale</string>
    <string name="projected_barriers_applied_most_in_game">Écrans générés  (Max.)</string>
    <string name="blaster_kills_most_in_game">Victimes de miséricorde (Max.)</string>
    <string name="unscoped_hits">Tirs à l\'oeil nu</string>
    <string name="unscoped_accuracy_best_in_game">Préicison à l\'oeil nu (Max.)</string>
    <string name="nano_boosts_applied_most_in_game">Nanoboosts injectés (Max.)</string>
    <string name="unscoped_shots">Tirs à l\'oeil nu</string>
    <string name="enemies_slept_most_in_game">Ennemis endormis (Max.)</string>
    <string name="enemies_slept">Ennemis endormis</string>
    <string name="self_destruct_kills">Victimes d\'autodestruction</string>
    <string name="enemies_empd_most_in_game">Ennemis neutralisés par IEM (Max.)</string>
    <string name="enemies_hacked_most_in_game">Ennemis piratés (Max.)</string>
    <string name="enemies_hacked">Ennemis piratés</string>
    <string name="charge_kills">Victimes de charge</string>
    <string name="earthshatter_kills">Victimes de choc sismique</string>
    <string name="damage_blocked_most_in_game">Dégâts bloqués (Max.)</string>
    <string name="fire_strike_kills_most_in_game">Victimes de frappe de feu (Max.)</string>
    <string name="earthshatter_kills_most_in_game">Victimes de choc sismique (Max.)</string>
    <string name="damage_blocked">Dégâts bloqués</string>
    <string name="charge_kills_most_in_game">Victimes de charge (Max.)</string>
    <string name="fire_strike_kills">Victimes de frappe de feu</string>
    <string name="pulse_bomb_kills_most_in_game">Victimes de bombe à impulsion (Max.)</string>
    <string name="pulse_bombs_attached_most_in_game">Bombes à impulsion collées (Max.)</string>
    <string name="pulse_bombs_attached">Bombe à impulsion collées</string>
    <string name="pulse_bomb_kills">Victimes de bombe à impulsion</string>
    <string name="melee_final_blows_most_in_game">Coups de grâce en mêlée (Max.)</string>
    <string name="transcendence_healing_best">Soins de transcendance (Max.)</string>
    <string name="rip_tire_kills_most_in_game">Victimes de pneumastic (Max.)</string>
    <string name="enemies_trapped_a_minute">Ennemis piégés par minute</string>
    <string name="rip_tire_kills">Victimes de pneumastic</string>
    <string name="enemies_trapped">Ennemis piégés</string>
    <string name="enemies_trapped_most_in_game">Ennemis piégés (Max.)</string>
    <string name="deadeye_kills_most_in_game">Victimes d\'implacable (Max.)</string>
</resources>